# elastic-apm-agent-cpp-prototype

./: .gitignore  CMakeLists.txt  README.md
examples/command_line_app/: Build_and_Run.bat  Build_and_Run.sh  CMakeLists.txt  Elastic_APM_separate_compilation.cxx  main.cxx
src/include/Elastic/: Apm.hxx
src/include/Elastic/Apm/: API.hxx  ExecutionSegmentId.hxx  IEventSink.hxx  IExecutionSegment.hxx  IExecutionSegmentDto.hxx  ISpan.hxx  ISpanDto.hxx  ITracer.hxx  ITransaction.hxx  ITransactionDto.hxx  LabelValue.hxx  TraceId.hxx  TracerBuilder.hxx  separate_compilation.hxx  separate_compilation_config.hxx
src/include/Elastic/Apm/Config/: EnvVarsRawSnapshotSource.hxx  IRawSnapshot.hxx  IRawSnapshotSource.hxx
src/include/Elastic/Apm/Impl/: AmbientContext.hxx  AmbientContextRoot.hxx  ExecutionSegment.hxx  NoopTracer.hxx  Tracer.hxx  TracerBuilder_impl.hxx  TracerDependencies.hxx  Transaction.hxx  initSequence.hxx  log.hxx  streamToLogImpl.hxx
src/include/Elastic/Apm/Impl/Config/: BoolOptionMetadata.hxx  IOptionMetadata.hxx  IRawSnapshot_ex.hxx  LogLevelOptionMetadata.hxx  Manager.hxx  OptionMetadataBase.hxx  OptionsMetadata.hxx  ParseFailedException.hxx  Parser.hxx  Snapshot.hxx  SnapshotSource.hxx  StringOptionMetadata.hxx  allOptionsMetadata.hxx  initSequenceOptionsMetadata.hxx
src/include/Elastic/Apm/Impl/Log/: BareTypeToLog.hxx  Logger.hxx  LoggerFactory.hxx  TypeErasedStreamable.hxx  defaultSinks_impl.hxx  macros.hxx  streamToLogImpl_Level.hxx  streamToLogImpl_Optional.hxx  streamToLogImpl_base.hxx  streamToLogImpl_fundamental.hxx  streamToLogImpl_method.hxx  streamToLogImpl_pointers.hxx  streamToLogImpl_std_string.hxx  streamToLogImpl_via_ADL.hxx  wrap_stream_to_log_func.hxx  write_obj_fields_as_map.hxx
src/include/Elastic/Apm/Impl/Log/Backend/: Facade.hxx  Facade_impl.hxx  Manager.hxx  Manager_impl.hxx  PmrOutputStringStream.hxx  RecordVisualFormatter.hxx  RecordVisualFormatter_impl.hxx  StdStreamSink.hxx  StreamToVisualAdaptor.hxx  TextSinkBase.hxx  VisualStreamToString.hxx  WindowsOutputDebugStringSink.hxx  visualFormatContextValue.hxx  visualFormatContextValue_impl.hxx
src/include/Elastic/Apm/Impl/ServerComm/: EventSender.hxx  Metadata.hxx  SerializedEventsSender.hxx  Serializer.hxx
src/include/Elastic/Apm/Impl/Util/: AssertionFailedException.hxx  Cpp_features_detection.hxx  Cpp_features_detection_pragma.hxx  Exception.hxx  IJsonWriter.hxx  JsonWriter.hxx  OnScopeExit.hxx  PmrBoostVector.hxx  SystemClockTimePoint_toLog.hxx  SystemClockTimePoint_toLog_impl.hxx  TimeSource.hxx  TypeTraits.hxx  UniquePtrWrapper.hxx  assert.hxx  assertValid.hxx  assertValid_base.hxx  assertValid_method.hxx  assertValid_pointers.hxx  assertValid_via_ADL.hxx  assert_config.hxx  assert_macros.hxx  basic_macros.hxx  basic_util.hxx  class_name_from_member_function.hxx  compilation_config.hxx  compilation_config_warnings.hxx  for_range.hxx  is_debug_build.hxx  movable_copyable.hxx  platform.hxx  platform_detection.hxx  platform_impl.hxx  pmrAllocateUnique.hxx  repeat_n_times.hxx  text_util.hxx
src/include/Elastic/Apm/Impl/wrapped_3rd_party_headers/: prefix.hxx  suffix.hxx
src/include/Elastic/Apm/Impl/wrapped_3rd_party_headers/Linux/: unistd.hxx
src/include/Elastic/Apm/Impl/wrapped_3rd_party_headers/Linux/sys/: types.hxx
src/include/Elastic/Apm/Impl/wrapped_3rd_party_headers/Windows/: process.hxx  windows.hxx
src/include/Elastic/Apm/Impl/wrapped_3rd_party_headers/boost/: compressed_pair.hxx  current_function.hxx  operators.hxx  optional.hxx  type_traits.hxx  variant.hxx
src/include/Elastic/Apm/Impl/wrapped_3rd_party_headers/rapidjson/: stringbuffer.hxx  writer.hxx
src/include/Elastic/Apm/Impl/wrapped_3rd_party_headers/std/: algorithm.hxx  array.hxx  cstddef.hxx  cstdint.hxx  cstdlib.hxx  exception.hxx  functional.hxx  iomanip.hxx  ios.hxx  iostream.hxx  limits.hxx  memory.hxx  mutex.hxx  ostream.hxx  sstream.hxx  string.hxx  type_traits.hxx  typeinfo.hxx  unordered_map.hxx  utility.hxx  vector.hxx
src/include/Elastic/Apm/Log/: CompositeSink.hxx  ISink.hxx  IStream.hxx  IStreamable.hxx  IVisualStream.hxx  Level.hxx  RecordDataRefs.hxx  defaultSinks.hxx
src/include/Elastic/Apm/Util/: ArrayView.hxx  BinaryId.hxx  ISteadyClock.hxx  ISystemClock.hxx  ITimeSource.hxx  Optional.hxx  PmrAllocator.hxx  PmrString.hxx  PmrUniquePtr.hxx  PmrVector.hxx  SteadyClockTimePoint.hxx  String.hxx  StringView.hxx  SystemClockTimePoint.hxx  UniquePtrTypeErasedDeleter.hxx  basic_types.hxx  pmrAllocateUniqueTypeErasedDeleter.hxx
tests/: API_tests.cxx  CMakeLists.txt  Elastic_APM_separate_compilation.cxx  config_tests.cxx  main.cxx
tests/Log_tests/: HasStreamToLogImpl_tests.cxx  Has_streamToLogImpl_method_tests.cxx  Has_streamToLogImpl_via_ADL_tests.cxx  boost_log_tests.cxx  levelNames_tests.cxx  macros_tests.cxx  streamToLogImpl_Optional_tests.cxx  streamToLogImpl_pointers_tests.cxx  visualFormat_tests.cxx
tests/TestUtil/: DefaultFixture.cxx  DefaultFixture.hxx  Has_to_std_ostream_operator.hxx  MockLogRecord.cxx  MockLogRecord.hxx  MockLogStream.cxx  MockLogStream.hxx  MockLogger.hxx  MockMemoryResource.cxx  MockMemoryResource.hxx  MockRawConfigSnapshotSource.cxx  MockRawConfigSnapshotSource.hxx  TracerUnderTestBuilder.hxx  abortOnCallToGlobalOperatorNewDelete.cxx  abortOnCallToGlobalOperatorNewDelete.hxx  message_for_assert.cxx  message_for_assert.hxx  remove_const_from_this.hxx  sharedPtrToUniqueTypeErasedDeleter.hxx  to_std_ostream_via_streamToLog.hxx  unit_test_macros.hxx  unit_test_util.hxx  unit_test_util_allocator.cxx  unit_test_util_allocator.hxx  unit_test_util_log.hxx
tests/TestUtil_tests/: abortOnCallToGlobalOperatorNewDelete_tests.cxx
tests/Util_tests/: ArrayView_tests.cxx  StringView_tests.cxx  String_tests.cxx  UniquePtrTypeErasedDeleter_tests.cxx  assertValid_tests.cxx
tools/Linux/: Build_and_Run_example.sh  Build_and_Test.sh  Build_and_Test_one_variant.sh  ReBuild_and_Test.sh  z_Set_Env_Vars.sh
tools/Windows/: Build_and_Run_example.bat  Build_and_Test.bat  Build_and_Test_one_variant.bat  ReBuild_and_Test.bat  z_Set_Env_Vars.bat
(+18 files in other folders)
